End Of Section10

--- a/BookStoreApp.Blazor.Server.UI/_Imports.razor
+++ b/BookStoreApp.Blazor.Server.UI/_Imports.razor
@@ -1,4 +1,4 @@
-﻿﻿@using System.Net.Http
+﻿@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -10,3 +10,5 @@
 @using BookStoreApp.Blazor.Server.UI.Shared
 @using BookStoreApp.Blazor.Server.UI.Services.Base
 @using BookStoreApp.Blazor.Server.UI.Services.Authentication
+@using BookStoreApp.Blazor.Server.UI.Services
+@using BookStoreApp.Blazor.Server.UI.Static
