--- a/BookStoreApp.Blazor.Server.UI/Pages/Users/Register.razor
+++ b/BookStoreApp.Blazor.Server.UI/Pages/Users/Register.razor
@@ -4,7 +4,7 @@
 
 <h3>Register New Account</h3>
 
-@if (string.IsNullOrEmpty(message) == false)
+@if(string.IsNullOrEmpty(message) == false)
 {
     <div class="alert alert-danger">
         <p>@message</p>
@@ -19,36 +19,36 @@
             <InputText class="form-control" @bind-Value="RegistrationModel.Email" />
             <ValidationMessage For="@(() => RegistrationModel.Email)" />
         </div>
-        <br />
+        <br/>
         <div class="form-group">
             <label for="email">First Name</label>
             <InputText class="form-control" @bind-Value="RegistrationModel.FirstName" />
             <ValidationMessage For="@(() => RegistrationModel.FirstName)" />
         </div>
-        <br />
+        <br/>
         <div class="form-group">
             <label for="email">Last Name</label>
             <InputText class="form-control" @bind-Value="RegistrationModel.LastName" />
             <ValidationMessage For="@(() => RegistrationModel.LastName)" />
         </div>
-        <br />
+        <br/>
         <div class="form-group">
             <label for="email">Password</label>
             <InputText class="form-control" type="password" @bind-Value="RegistrationModel.Password" />
             <ValidationMessage For="@(() => RegistrationModel.Password)" />
         </div>
-        <br />
+        <br/>
         <button type="submit" class="btn btn-primary btn-block">Register</button>
 
-
+        
     </EditForm>
 </div>
 
 @code {
     UserDto RegistrationModel = new UserDto
-        {
-            Role = "User"
-        };
+    {
+        Role = "User"
+    };
     string message = string.Empty;
     private async Task HandleRegistration()
     {
@@ -56,21 +56,20 @@
         {
             await httpClient.RegisterAsync(RegistrationModel);
             NavigateToLogin();
-        }
-        catch (ApiException ex)
+        } 
+        catch(ApiException ex)
         {
-            if (ex.StatusCode >= 200 && ex.StatusCode <= 299)
+            if(ex.StatusCode >= 200 && ex.StatusCode <= 299)
             {
                 NavigateToLogin();
             }
 
             message = ex.Response;
-        }
+        }   
     }
 
 
-    private void NavigateToLogin()
-    {
+    private void NavigateToLogin(){
         navManager.NavigateTo("/users/login");
     }
 }
